--- a/style.css
+++ b/style.css
@@ -4,6 +4,20 @@
     background-color: #e8e5df ;
     margin: 0 auto;
 }
+#history{
+    text-align: right;
+    font-size: 20px;
+    color: gray;
+    padding-top: 50px;
+    padding-right: 10px;
+}
+#current{
+    text-align: right;
+    font-size: 60px;
+    padding-top: 80px;
+    padding-right: 10px;
+}
+
 #display{
     width: 100%;
     height: 270px;
