--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .calculator{
     width: 490px;
     height: 750px;
     background-color: #e8e5df ;
-    margin: 0 auto;
+    
+}
+#whole{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 0;
+    margin-top: 20px;
 }
 #history{
     text-align: right;
@@ -22,6 +34,13 @@
     width: 100%;
     height: 270px;
 }
+
+#historyPage{
+    display: none;
+    width: 400px;
+    height: 750px;
+    background-color: #e8e5df
+}
 #buttons{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -40,20 +59,4 @@
 #buttons #equal{
     background-color: blue;
     color: white;
-}
-
-.buttonmove {
-    position: relative;
-    position: absolute;
-    top: 100;
-    right: 100;
-    display: flex;
-}
-
-#historybutton{
-    display: none;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 15px;
-    margin-top: 10px;
 }
